# model_tuner

./: .gitignore  LICENSE.md  README.md  README_long.md  bootstrapper.py  comparison.py  conf.py  model_tuner.py  pickleObjects.py  pyproject.toml  requirements.txt  requirements_new.txt  setup.py  test_case_leon.ipynb  test_tuner.py
.github/workflows/: workflow.yml
assets/: scaling_imputation.png:Zone.Identifier
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
checkpoints/: model-epoch=00-v1.ckpt  model-epoch=00.ckpt  model-epoch=03-v1.ckpt  model-epoch=03.ckpt  model-epoch=08-v1.ckpt  model-epoch=08-v2.ckpt  model-epoch=08-v3.ckpt  model-epoch=08.ckpt  model-epoch=10-v1.ckpt  model-epoch=10.ckpt
docs/: .buildinfo  .buildinfo.bak  Model_Tuner_Binary_Classification_AIDS_Clinical_Trials.html  Model_Tuner_Binary_Classification_Breast_Cancer_Example.html  Model_Tuner_ColumnTransformer.html  Model_Tuner_Column_Transformer.html  Model_Tuner_Regression_Redfin_Real_Estate.html  about.html  caveats.html  changelog.html  conf.py  genindex.html  getting_started.html  index.html  index.rst  objects.inv  references.html  search.html  searchindex.js  usage_guide.html
docs/.doctrees/: about.doctree  caveats.doctree  changelog.doctree  environment.pickle  getting_started.doctree  index.doctree  main.doctree  references copy.doctree  references.doctree  usage_guide.doctree
docs/_sources/: about.rst.txt  caveats.rst.txt  changelog.rst.txt  getting_started.rst.txt  index.rst.txt  main.rst.txt  references.rst.txt  usage_guide copy.rst.txt  usage_guide.rst.txt
docs/_static/: custom.css  custom.js  documentation_options.js
docs/docs/: .buildinfo  index.html  search.html
docs/docs/.doctrees/: environment.pickle  index.doctree
docs/example_htmls/: Model_Tuner_Binary_Classification_AIDS_Clinical_Trials.html  Model_Tuner_Binary_Classification_AIDS_Clinical_Trials.html.html  Model_Tuner_Binary_Classification_Breast_Cancer_Example.html  Model_Tuner_Binary_Classification_Imbalanced_Learning.html  Model_Tuner_Column_Transformer.html  Model_Tuner_Titanic_KFold.html
docs/source/: conf.py  index.rst
modeltuner_venv/: pyvenv.cfg
modeltuner_venv/share/jupyter/nbextensions/catboost-widget/: index.js
notebooks/: =1.0.0  DNN_early_test _pytorch.py  DNN_early_test.py  Model_Tuner_Binary_Classification_AIDS_Clinical_Trials.html  Model_Tuner_Binary_Classification_Breast_Cancer_Example.html  Model_Tuner_ColumnTransformer.html  Model_Tuner_Regression_Redfin_Real_Estate.html  adultincome_xgbearly.py  bayesian_test.py  binary_debug.py  binary_test.ipynb  catboost_kfold.py  catboosttest.py  early_stopping_coltrans.py  functions.py  lr_smote_test.py  multi_class_test.py  regression_test.ipynb  regression_test.py  xgb_early_bootstrap_test.py  xgb_early_smote_rfe_test.py  xgb_early_smote_test.py  xgb_early_test.py  xgb_multi.py  xgb_mutli.py  xgboostdebug.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
notebooks/venvpy310/: pyvenv.cfg
public_data/: redfin_2024-04-16-15-59-17.xlsx
py_example_scripts/: adultincome_xgbearly.py  adultincome_xgbearly_group_shuffle_split.py  bayesian_test.py  bootstrap_regression_test.py  catboost_kfold.py  catboost_kfold_calibrated.py  catboost_multi.py  catboostcustomsplit.py  catboosttest.py  early_cat_col_trans.py  early_stopping_coltrans.py  early_stopping_coltrans_cat.py  fit_params_catboost.py  fit_params_catboost_rfe.py  groupkfold.py  lr_smote_group_shuffle_test.py  lr_smote_test.py  multi_class_test.py  regression_test.py  regression_test_group_shuffle_split.py  regression_test_kfold.py  regression_test_rfe.py  rf_calibrated.py  rf_calibrated_group_shuffle_test.py  rf_kfold_calibrated.py  svm_smote_calibrated.py  threshold_testing_rf.py  threshold_testing_xgb.py  xgb_early_bootstrap_test.py  xgb_early_smote_rfe_test.py  xgb_early_smote_test.py  xgb_multi.py  xgbearly_calibrated_SHAP.py  xgbearly_smote_rfe_calibrated.py
py_example_scripts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
py_example_scripts/catboost_info/learn/: events.out.tfevents
py_scripts/: adultincome_xgbearly.py  catboost_kfold.py  catboosttest.py  early_stopping_coltrans.py  multi_class_test.py  xgb_early_bootstrap_test.py  xgb_multi.py
source/: about.rst  caveats.rst  changelog.rst  conf.py  getting_started.rst  index.rst  references.bib  usage_guide.rst
source/_static/: custom.css
src/model_tuner/: __init__.py  _init_.py  bootstrapper.py  eval_metrics.py  fitparams_model_tuner_utils.py  logo.py  main.py  model_tuner_utils.py  model_tuner_utils_.py  pickleObjects.py  pytorch_model_tuner.py  threshold_optimization.py
structured_data_classifier/: best_pipeline  graph  oracle.json
structured_data_classifier/best_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
structured_data_classifier/best_model/variables/: variables.data-00000-of-00001  variables.index
structured_data_classifier/trial_0/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
structured_data_classifier/trial_1/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
structured_data_classifier/trial_2/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
unittests/: test_bootstrapper.py  test_custom_help.py  test_custom_splits.py  test_frozen_estimator_calibration.py  test_model.py  test_pickleObjects.py  test_threshold_optimization.py
venvpy311/: pyvenv.cfg
venvpy311/share/jupyter/labextensions/catboost-widget/: package.json
venvpy37/: pip-selfcheck.json  pyvenv.cfg
venvpy38/: pyvenv.cfg
venvpy38/share/jupyter/labextensions/catboost-widget/static/: 138.1b18795f1631648f3df1.js  remoteEntry.71e5662234b926b21a28.js
venvpy39/: pyvenv.cfg
