[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_tuner"
version = "0.0.34b1"
description = "A Python library for training and tuning machine learning models."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "UCLA CTSI ML Team: Arthur Funnell, Leonid Shpaner, Panayiotis Petousis", email = "pp89@ucla.edu" }
]
requires-python = ">=3.7"
dependencies = [
    "joblib==1.3.2",
    "tqdm==4.66.4",
    "catboost==1.2.7",

    # Python 3.7 ≤ version < 3.8
    "numpy>=1.21.4, <1.23.0; python_version >= '3.7' and python_version < '3.8'",
    "pandas>=1.1.5, <1.3.5; python_version >= '3.7' and python_version < '3.8'",
    "scikit-learn>=0.23.2, <1.0.2; python_version >= '3.7' and python_version < '3.8'",
    "scipy>=1.4.1, <1.11; python_version >= '3.7' and python_version < '3.8'",
    "imbalanced-learn>=0.7.0, <0.8.0; python_version >= '3.7' and python_version < '3.8'",
    "scikit-optimize>=0.8.1, <0.10.2; python_version >= '3.7' and python_version < '3.8'",
    "xgboost>=1.6.2, <2.1.2; python_version >= '3.7' and python_version < '3.8'",

    # Python 3.8 only (tight scikit-learn pin to avoid issues)
    "setuptools==75.1.0; python_version == '3.8'",
    "wheel==0.44.0; python_version == '3.8'",
    "numpy>=1.19.5, <2.0.0; python_version == '3.8'",
    "pandas>=1.3.5, <2.2.3; python_version == '3.8'",
    "scikit-learn>=1.0.2, <1.4.0; python_version == '3.8'",
    "scipy>=1.6.3, <1.11; python_version == '3.8'",
    "scikit-optimize==0.10.2; python_version == '3.8'",
    "imbalanced-learn==0.12.4; python_version == '3.8'",
    "xgboost==2.1.2; python_version == '3.8'",

    # Python 3.9 ≤ version < 3.11 — supports latest sklearn up to 1.5.1
    "setuptools==75.1.0; python_version >= '3.9' and python_version < '3.11'",
    "wheel==0.44.0; python_version >= '3.9' and python_version < '3.11'",
    "numpy>=1.19.5, <2.0.0; python_version >= '3.9' and python_version < '3.11'",
    "pandas>=1.3.5, <2.2.3; python_version >= '3.9' and python_version < '3.11'",
    "scikit-learn>=1.0.2, <=1.5.1; python_version >= '3.9' and python_version < '3.11'",
    "scipy>=1.6.3, <=1.14.0; python_version >= '3.9' and python_version < '3.11'",
    "scikit-optimize==0.10.2; python_version >= '3.9' and python_version < '3.11'",
    "imbalanced-learn==0.12.4; python_version >= '3.9' and python_version < '3.11'",
    "xgboost==2.1.2; python_version >= '3.9' and python_version < '3.11'",

    # Python 3.11 and up
    "setuptools==75.1.0; python_version >= '3.11'",
    "wheel==0.44.0; python_version >= '3.11'",
    "numpy>=1.19.5, <2.0.0; python_version >= '3.11'",
    "pandas>=1.3.5, <2.2.3; python_version >= '3.11'",
    "scikit-learn==1.5.1; python_version >= '3.11'",
    "scipy==1.14.0; python_version >= '3.11'",
    "imbalanced-learn==0.12.4; python_version >= '3.11'",
    "scikit-optimize==0.10.2; python_version >= '3.11'",
    "xgboost==2.1.2; python_version >= '3.11'",
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]


[project.urls]
"Author Website" = "https://www.mii.ucla.edu/"
"Documentation" = "https://uclamii.github.io/model_tuner"
"Zenodo Archive" = "https://zenodo.org/doi/10.5281/zenodo.12727322"
"Source Code" = "https://github.com/uclamii/model_tuner/"

[tool.setuptools.packages.find]
where = ["src"]
