[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_tuner"
version = "0.0.34b7"
description = "A Python library for training and tuning machine learning models."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "UCLA CTSI ML Team: Arthur Funnell, Leonid Shpaner, Panayiotis Petousis", email = "pp89@ucla.edu" }
]
requires-python = ">=3.8"
dependencies = [
    # ---------- universal (no python-version marker) ----------
    "joblib>=1.3.2,<2.0",
    "tqdm>=4.66.4,<5.0",
    "catboost==1.2.8",
    "scikit-optimize==0.10.2",
    "imbalanced-learn==0.12.4",
    "xgboost==2.1.2",
    "pandas>=1.3.5,<2.2.3",
    # ---------- Python 3.8 ----------
    "numpy>=1.19.5,<2.0.0; python_version == '3.8'",
    "scikit-learn>=1.0.2,<1.4.0; python_version == '3.8'",
    "scipy>=1.6.3,<1.11; python_version == '3.8'",
    # ---------- Python 3.9 and 3.10 ----------
    "numpy>=1.19.5,<2.0.0; python_version >= '3.9' and python_version < '3.11'",
    "scikit-learn==1.5.1; python_version >= '3.9' and python_version < '3.11'",
    "scipy>=1.6.3,<2.0; python_version >= '3.9' and python_version < '3.11'",
    # ---------- Python 3.11+ ----------
    "numpy>=1.26,<3.0; python_version >= '3.11'",
    "scikit-learn==1.5.1; python_version >= '3.11'",
    "scipy>=1.14.0,<2.0; python_version >= '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Author Website" = "https://www.mii.ucla.edu/"
"Documentation" = "https://uclamii.github.io/model_tuner"
"Zenodo Archive" = "https://zenodo.org/doi/10.5281/zenodo.12727322"
"Source Code" = "https://github.com/uclamii/model_tuner/"

[tool.setuptools.packages.find]
where = ["src"]